--- a/card.css
+++ b/card.css
@@ -1,7 +1,7 @@
 .flip-card {
     background-color: transparent;
-    width: 180px;
-    height: 280px;
+    width: 11.25rem;
+    height: 17.5rem;
     perspective: 1000px;
     border-radius: 48%;
     box-sizing: border-box;
@@ -31,7 +31,7 @@
   }
   
   .flip-card-back {
-    border: 1px solid #fff;
+    border: 0.063rem solid #fff;
     background-image: linear-gradient(rgb(12, 12, 12),rgb(29, 29, 29));
     color: rgb(255, 255, 255);
     transform: rotateY(180deg);
