--- a/card.css
+++ b/card.css
@@ -35,4 +35,7 @@
     background-image: linear-gradient(rgb(12, 12, 12),rgb(29, 29, 29));
     color: rgb(255, 255, 255);
     transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
