--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ header{
     height: 100vh;
 
     background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-    url(back.JPEG);
+    url(/images/back.JPEG);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -27,6 +27,9 @@ header h1{
     font-size: 2rem;
 }
 a:visited{
+    color: #fff;
+}
+a:link{
     color: #fff;
 }
 a:hover{
