--- a/css/card.css
+++ b/css/card.css
@@ -32,8 +32,10 @@
   
   .flip-card-back {
     border: 0.063rem solid #fff;
-    background-image: linear-gradient(rgb(12, 12, 12),rgb(29, 29, 29));
-    color: rgb(255, 255, 255);
+    background-image: linear-gradient(rgba(134, 189, 207, 0.897),rgb(173, 216, 230));
+
+    color: rgb(40,40,40);
+
     transform: rotateY(180deg);
     display: flex;
     justify-content: center;
