--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+:root{
+    --txt:rgb(40, 40, 40);
+    --destaq:rgb(230, 187, 173);
+    --fund:rgb(173,216,230);
+    --fundoDtq:rgb(134, 197, 218);
+}
 *{
     margin: 0;
     padding: 0;
@@ -10,8 +16,7 @@ header{
     width: 100%;
     height: 100vh;
 
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-    url(/images/back.JPEG);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/back.JPEG);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -19,6 +24,8 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    color: var(--txt);
 }
 header img{
     border-radius: 48%;
@@ -27,17 +34,38 @@ header h1{
     font-size: 2rem;
 }
 a:visited{
-    color: #fff;
+    color: var(--txt);
 }
 a:link{
-    color: #fff;
+    color: var(--txt);
 }
+
 a:hover{
     -ms-transform: scale(1.5);
     -webkit-transform: scale(1.2);
     transform: scale(1.2); 
 }
 .content{
-    height: 2000px;
+    height: 20rem;
+    margin: 3rem;
+    background-color: var(--fund);
+    border: 1px solid;
+
+    display: flex;
+}
+.Leo,.Art,.Car,.Hel{
+    width: 25%;
+    background-color: var(--fundoDtq);
+    margin: 2rem;
+    border: 1px solid;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.content img{
+    border-radius: 60%;
+    width: 80%;
+    height: 70%;
 }
 
