--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
 }
+body{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 header{
     width: 100%;
     height: 100vh;
@@ -46,22 +51,27 @@ a:hover{
     transform: scale(1.2); 
 }
 .content{
-    height: 20rem;
     margin: 3rem;
+    width: 100%;
     background-color: var(--fund);
     border: 1px solid;
 
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 .Leo,.Art,.Car,.Hel{
-    width: 25%;
+    width: 13rem;
     background-color: var(--fundoDtq);
     margin: 2rem;
     border: 1px solid;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
+
+    align-items: center;
 }
 .content img{
     border-radius: 60%;
