--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    /* background-color: var(--destaq); */
+    background-color: rgb(207, 229, 236);
 }
 header{
     width: 100%;
