--- a/css/card.css
+++ b/css/card.css
@@ -31,7 +31,7 @@
   }
   
   .flip-card-back {
-    border: 0.063rem solid #fff;
+    border: 0.063rem solid var(--txt);
     background-image: linear-gradient(rgba(134, 189, 207, 0.897),rgb(173, 216, 230));
 
     color: rgb(40,40,40);
