--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
 header{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/fundo.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/back.jpeg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -53,7 +53,7 @@ header a:hover{
 .content{
     margin: 3rem;
     width: 100%;
-    height: 100vh;
+
     background-color: var(--fund);
     border: 1px solid;
 
@@ -62,11 +62,7 @@ header a:hover{
     justify-content: center;
 
 }
-.ultima{
-    background-color: var(--destaq);
-    height: 100vh;
-    width: 100%;
-}
+
 .Leo,.Art,.Car,.Hel{
     width: 13rem;
     background-color: var(--fundoDtq);
@@ -79,19 +75,30 @@ header a:hover{
 
     align-items: center;
 }
-
 .content img{
     border-radius: 60%;
     width: 80%;
     height: 70%;
 }
+
 .hidden{
     opacity: 0;
-    filter: blur(0px);
-    transition: all 1s;
+    filter: blur(15px);
+    transition: all 1.5s;
+    transform: translateX(-100%);
 }
 .show{
     opacity: 1;
-    filter: blur(0px);
-    transition: all 1s;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: all 2s;
+}
+.content:nth-child(2){
+    transition-delay: 500ms;
+}
+.content:nth-child(3){
+    transition-delay: 800ms;
+}
+.content:nth-child(4){
+    transition-delay: 1100ms;
 }
