--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
     justify-content: center;
     background-color: rgb(207, 229, 236);
 }
-header{
+#head{
     width: 100%;
     height: 100vh;
     background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/back.jpeg);
@@ -45,13 +45,13 @@ a:link{
     color: var(--txt);
 }
 
-header a:hover{
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.2);
+header h1:hover{
+    /* -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.2); */
     transform: scale(1.2); 
 }
 .content{
-    margin: 3rem;
+    margin: 4rem;
     width: 100%;
 
     background-color: var(--fund);
@@ -63,10 +63,11 @@ header a:hover{
 
 }
 
-.Leo,.Art,.Car,.Hel{
-    width: 13rem;
+.Leo,.Art,.Car,.Hel,.Edu{
+    width: 17rem;
+    height: 15rem;
     background-color: var(--fundoDtq);
-    margin: 2rem;
+    margin: 3rem;
     border: 1px solid;
 
     display: flex;
@@ -94,7 +95,7 @@ header a:hover{
     transition: all 2s;
 }
 .content:nth-child(2){
-    transition-delay: 500ms;
+    transition-delay: 500;
 }
 .content:nth-child(3){
     transition-delay: 800ms;
@@ -102,3 +103,109 @@ header a:hover{
 .content:nth-child(4){
     transition-delay: 1100ms;
 }
+.Leo:hover,.Art:hover,.Car:hover,.Hel:hover,.Edu:hover{
+    transform: scale(1.2);
+    transition: transform 0.5s;
+}
+.flip-card {
+    background-color: transparent;
+    width: 11.25rem;
+    height: 17.5rem;
+    perspective: 1000px;
+    border-radius: 48%;
+    box-sizing: border-box;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    border-radius: 48%;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(-180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+    border-radius: 48%;
+  }
+  
+  .flip-card-back {
+    border: 0.063rem solid var(--txt);
+    background-image: linear-gradient(rgba(134, 189, 207, 0.897),rgb(173, 216, 230));
+
+    color: rgb(40,40,40);
+
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+nav{
+    display: flex;
+    width: 100%;
+    height: 5rem;
+    justify-content: space-between;
+    transition: background 1s;
+    position: fixed;
+}
+nav img{
+    height: 4rem;
+    margin: 0.6rem 5rem;
+}
+nav ul{
+    margin: 0rem 4rem;
+}
+nav li{
+    display: inline-block;
+    list-style: none;
+    justify-content: space-between;
+    margin: 1.5rem 1rem;
+    font-size: 1.3rem;
+    color: var(--txt);
+    opacity: 0;
+}
+nav:hover{
+    background-color:var(--destaq) ;
+
+    border: 1px solid;
+}
+nav:hover li{
+    opacity: 1;
+}
+
+.container2{
+    /* height: 41.59rem; */
+    height: calc(41.59rem*4);
+    width: 100%;
+    background-image: linear-gradient(rgb(134, 197, 218),rgb(173,216,230));
+    color: var(--txt);  
+
+}
+.Autor,.Livro,.Resumo,.Conclusao{
+    height: 41.59rem;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+}
+.content2 h1{
+    font-size: 3rem;
+    color: var(--txt);
+    margin: 2rem;
+}
+.Autor{
+    margin: 3rem;
+}
+
