--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html{
 #head{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/back.jpeg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/back.jpeg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
