--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ nav{
     flex-wrap: wrap;
     width: 100%;
     min-height: 5rem;
-
+    max-height: 10rem;
     justify-content: space-between;
     align-content: center;
     transition: background 1s;
