--- a/css/style.css
+++ b/css/style.css
@@ -221,11 +221,13 @@ nav li:hover{
     font-size: 3rem;
     color: var(--txt);
     margin-top: 5rem;
+    opacity: 0;
 }
 .content2 p{
     color: var(--txt);
     text-transform: capitalize;
     text-align: justify;
+    opacity: 0;
 }
 #voltar{
     padding: 0.7rem;
@@ -241,7 +243,7 @@ nav li:hover{
 }
 
 
-@keyframes slideleft{
+ @keyframes slideleft{
     0%{
         transform: translate(100px);
         opacity: 0;
@@ -251,12 +253,17 @@ nav li:hover{
         opacity: 1;
     }
 }
-.slide-left{
-    animation: slideleft 1s linear forwards;
+ .slide-left{
+    animation: slideleft 0.7s forwards;
+} 
+p.slide-left{
+    animation-delay: 2.8s;
 }
-/* p.slide-left{
-    animation-delay: 1s;
-} */
-/* .links.slide-left{
-    animation-delay: 1s;
-} */
+h1.slide-left{
+    animation-delay: 1.8s;
+}
+.links.slide-left a{
+    animation-duration: 1s;
+    animation-delay: 0.8s;
+    /* opacity: 0; */
+}
