--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ nav li{
        transform: scale(1.5);
     }
     #autor{
-        margin: 3.5rem 0rem;
+        margin: 6rem 0rem;
     }
    
 }
@@ -246,7 +246,7 @@ nav li:hover{
     flex-wrap: wrap;
 
     justify-content: center;
-    align-content: space-around;
+    align-content: space-between;
 }
 /* .Autor{
     height: 41.59rem;
