--- a/css/style.css
+++ b/css/style.css
@@ -215,9 +215,9 @@ nav li{
     .mob:hover{
        transform: scale(1.5);
     }
-    #autor{
+    /* #autor{
         margin: 6rem 0rem;
-    }
+    } */
 }
 
 
@@ -230,7 +230,6 @@ nav li:hover{
 }
 .container2{
     /* height: calc((41.59rem*4)); */
-    /* height: calc((46.59rem*4)); */
     width: 100vw;
     background-color: var(--fundo);
     color: var(--txt); 
@@ -247,17 +246,6 @@ nav li:hover{
     justify-content: center;
     align-content: space-between;
 }
-/* .Autor{
-    height: 41.59rem;
-    width: 100%;
-
-    display: flex;
-    flex-wrap: wrap;
-
-    justify-content: center;
-    align-content: space-around;
-    
-} */
 
 .content2 h1{
     font-size: 3rem;
