--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ nav li{
     }
     .mob:hover{
        transform: scale(1.5);
+       cursor: pointer;
     }
     #autor{
         margin-bottom: 5rem;
@@ -239,16 +240,14 @@ nav li{
 
     flex-direction: column;
 }
-#menu li{
-    
-}
 
 
 
-
-nav li:hover{
+li:hover{
     transform: scale(1.5);
 }
+
+
 .container2{
     /* height: calc((41.59rem*4)); */
     width: 100vw;
@@ -296,17 +295,7 @@ nav li:hover{
 }
 
 
- @keyframes slideleft{
-    0%{
-        transform: translate(100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translate(0px);
-        opacity: 1;
-    }
-}
- .slide-left{
+.slide-left{
     animation: slideleft 0.7s forwards;
 } 
 p.slide-left{
@@ -315,3 +304,39 @@ p.slide-left{
 h1.slide-left{
     animation-delay: 1.8s;
 }
+
+
+
+li{
+    animation: slideleft 1s both;
+}
+
+li:nth-child(1){
+    animation-delay: 0s;
+}
+li:nth-child(2){
+    animation-delay: 0.4s;
+}
+li:nth-child(3){
+    animation-delay: 0.7s;
+}
+li:nth-child(4){
+    animation-delay: 0.9s;
+}
+li:nth-child(5){
+    animation-delay: 1.1s;
+}
+
+
+@keyframes slideleft{
+   0%{
+       transform: translate(-100px);
+       opacity: 0;
+       scale: (1);
+   }
+   100%{
+       transform: translate(0px);
+       opacity: 1;
+   }
+}
+
