--- a/css/style.css
+++ b/css/style.css
@@ -205,9 +205,11 @@ nav li{
 
 @media screen and (max-width: 900px){
     .img{
-        height: 3.7grem;
+        height: 3.5rem;
         margin: 1rem 0rem;
-        margin-left: 4rem;
+    }
+    .logo{
+        margin-left: 3rem;
     }
 	nav ul{
         display: none;
@@ -221,7 +223,7 @@ nav li{
     color: var(--txt);
     }
     #imgC:hover,#imgM:hover{
-       transform: scale(1.4);
+       transform: scale(1.3);
        
     }
     #autor{
