--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ li:hover{
     font-size: 3rem;
     color: var(--txt);
     margin-top: 5rem;
+    margin-bottom: 1rem;
     opacity: 0;
     cursor: default;
 }
