--- a/css/style.css
+++ b/css/style.css
@@ -202,35 +202,11 @@ nav li{
     margin-left: 5rem;
 }
 
-@media screen and (max-width: 900px){
-    .logo{
-        margin-left: 0;
-        height: 4rem;
-    }
-    nav{
-        display: flex;
-        justify-content: space-around;
-    }
-    .mob{
-    display: flex;
-    align-items: center;
-    }
-	nav ul{
-        display: none;
-    }
-    #imgC:hover,#imgM:hover{
-       transform: scale(1.3);
-       
-    }
-    #autor{
-        margin-bottom: 5rem;
-    }
-}
 
 #menu{
     width: 100vw;
     height: 100vh;
-    background-color: var(--fundo3);
+    background-color: var(--fundo2);
     display: none;
     margin-top: 5rem;
     
@@ -242,9 +218,9 @@ nav li{
     
     display: flex;
     align-items: center;
-
+    
     justify-content: space-around;
-
+    
     flex-direction: column;
 }
 
@@ -266,7 +242,7 @@ li:hover{
 .Livro,.Resumo,.Conclusao,.Autor{
     min-height: 40rem;
     width: 100%;
-
+    
     display: flex;
     flex-wrap: wrap;
 
@@ -307,10 +283,10 @@ li:hover{
     animation: slideleft 0.7s forwards;
 } 
 p.slide-left{
-    animation-delay: 2.8s;
+    animation-delay: 1.8s;
 }
 h1.slide-left{
-    animation-delay: 1.8s;
+    animation-delay: 1.3s;
 }
 
 
@@ -319,16 +295,16 @@ nav li{
     animation: slideleft 1s both;
 }
 .menu li{
-    animation: aa 2s both;
+    animation: aa 1s both;
 }
 @keyframes aa {
     0%{
-
+        
         opacity: 0;
-
+        
     }
     100%{
-
+        
         opacity: 1;
     }
     
@@ -339,31 +315,63 @@ li:nth-child(1){
     animation-delay: 0s;
 }
 li:nth-child(2){
-    animation-delay: 0.4s;
+    animation-delay: 0.3s;
 }
 li:nth-child(3){
-    animation-delay: 0.7s;
+    animation-delay: 0.6s;
 }
 li:nth-child(4){
-    animation-delay: 0.9s;
+    animation-delay: 0.8s;
 }
 li:nth-child(5){
-    animation-delay: 1.1s;
+    animation-delay: 1s;
 }
+
 
 
 @keyframes slideleft{
-   0%{
-       transform: translate(-100px);
-       opacity: 0;
-   }
-   100%{
-       transform: translate(0px);
-       opacity: 1;
-   }
+    0%{
+        transform: translate(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(0px);
+        opacity: 1;
+    }
 }
 
 #imgC{
     display: none;
 }
 
+
+@media screen and (max-width: 900px){
+    .logo{
+        margin-left: 0;
+        height: 4rem;
+    }
+    nav{
+        display: flex;
+        justify-content: space-around;
+    }
+    .mob{
+    display: flex;
+    align-items: center;
+    }
+    nav ul{
+        display: none;
+    }
+    #imgC:hover,#imgM:hover{
+       transform: scale(1.3);
+       
+    }
+    #autor{
+        margin-bottom: 5rem;
+    }
+    p.slide-left{
+        animation-delay: 1.3s;
+    }
+    h1.slide-left{
+        animation-delay: 0.8s;
+    }
+}
