--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,24 @@
     background: var(--destaq);
 }
 *{
+    /* scrollbar-color: var(--destaq) var(--fundo3); */
+    scrollbar-color:  #0077FF #F0F0F0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
 }
+::-webkit-scrollbar {
+    width: 0.9rem;
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--destaq);
+}
+::-webkit-scrollbar-track {
+    background-color: var(--fundo2);
+}
+
 html{
     scroll-behavior: smooth;
     cursor:url('../images/cursor.png');
@@ -232,8 +244,6 @@ li:hover{
 
 
 .container2{
-    /* height: calc((41.59rem*4)); */
-    width: 100vw;
     background-color: var(--fundo);
     color: var(--txt); 
     display: flex; 
