--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -71,7 +71,7 @@ header h1:hover{
 
 .container{
     width: 100%;
-    height: 2000px;
+    /* height: 2000px; */
     
 }
 .content{
@@ -114,7 +114,7 @@ header h1:hover{
     flex-direction: row;
 }
 .esquerda{
-    max-width: 45%;
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -133,7 +133,12 @@ header h1:hover{
     border: 0.2rem solid var(--destaq);
     width: 100%;
     margin-left: 2rem;
+    margin-bottom: 2rem;
     background-color: var(--fundo2);
+}
+.profs p{
+    text-align: justify;
+    margin: 1rem;
 }
 .profs img{
     border-radius: 60%;
@@ -142,10 +147,10 @@ header h1:hover{
 
 }
 .liberato,.sandra{
-    width: 20rem;
-    height: 18rem;
+    width: 18rem;
+    height: 16rem;
     background-color: var(--fundo3);
-    margin: 3rem;
+    margin: 2rem;
     border: 1px solid;
 
     display: flex;
@@ -156,16 +161,24 @@ header h1:hover{
 
     cursor: default;
 }
+.contentSandra{
+    width: 100%;
+    height: 100%;
+}
+
 .esquerda h1{
     font-size: 3rem;
-    margin: 2rem 3rem 2rem 3rem;
     width: 100%;
+    margin-top: 2rem;
 }
 .utfField{
     background-color: rgba(173, 216, 230, 0.9);
     border: 0.2rem solid var(--destaq);
     margin: 2rem;
-    width: 50%;
+    width: 60%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 p,h1{
     text-transform: capitalize;
@@ -173,12 +186,16 @@ p,h1{
     color: var(--txt);
 }
 .utfField p{
-    font-size: 0,7rem;
+    font-size: 1rem;
     margin: 2rem;
 }
 .utfField h1{
     font-size: 3rem;
     margin: 2rem;
+}
+
+.logoPNG{
+    width: 40%;
 }
 
 
@@ -259,3 +276,9 @@ p,h1{
     justify-content: center;
     align-items: center;
   }
+  
+
+
+
+
+  
